--- a/locale/en/corteza-webapp-compose/block.yaml
+++ b/locale/en/corteza-webapp-compose/block.yaml
@@ -97,8 +97,9 @@ chart:
   display: Chart to display inside this block
   drillDown:
     label: Drill down
-    description: If a record list is selected, it will be used to display the drill down data. If no record list is selected the drill down data will be shown in a modal.
+    description: If a record list is selected, it will be used to display the drill down data. If no record list is selected, the drill down data will be shown in a modal.
     openInModal: Open in modal
+    configureColumns: Choose the default fields
   edit:
     label: Edit chart
     dimension:
@@ -118,6 +119,7 @@ chart:
     chartId: Chart preview (ID {{0}})
   searchPlaceholder: Type here to search all charts in this namespace
   openInBuilder: Open in chart builder
+  openChartList: Open chart list
 content:
   ok: Ok
   label: Content
@@ -190,7 +192,7 @@ metric:
   defaultMetricLabel: Unnamed metric
   drillDown:
     label: Drill down
-    description: If a record list is selected, it will be used to display the drill down data. If no record list is selected the drill down data will be shown in a modal.
+    description: If a record list is selected, it will be used to display the drill down data. If no record list is selected, the drill down data will be shown in a modal.
     openInModal: Open in modal
   edit:
     bucketLabel: Bucket size
