Add record list configuration for columns text wrap

--- a/locale/en/corteza-webapp-compose/block.yaml
+++ b/locale/en/corteza-webapp-compose/block.yaml
@@ -496,6 +496,9 @@ recordList:
       permissions: Permissions
     recordDisplayOptions: On record click
     recordSelectorDisplayOptions: On record selector click
+    textStyles: Text Styles
+    configureNonWrappingFelids: Configure non-wrapping fields
+    showFullText: Show full text
   recordPage: record page
   refField:
     footnote: Field that links records with the parent record
