--- a/locale/en/corteza-webapp-compose/block.yaml
+++ b/locale/en/corteza-webapp-compose/block.yaml
@@ -449,6 +449,7 @@ recordList:
     withPresortedRecords: with presorted ({{0}}) record
   record:
     draggable: Can drag & drop records to order them
+    editMode: Users will be able to open record in edit mode
     fullPageNavigation: Full page navigation
     hideAddButton: Users will be able to add new records
     hideImportButton: Users will be able to import records
