--- a/locale/en/corteza-webapp-compose/block.yaml
+++ b/locale/en/corteza-webapp-compose/block.yaml
@@ -180,6 +180,8 @@ general:
   tooltip:
     dragAndDrop: Drag and drop to change order
     translations: Field translations
+  globalBlock:
+    label: Make a global block
 iframe:
   label: IFrame
   pickURLField: Pick an URL field
