--- a/locale/en/corteza-webapp-compose/block.yaml
+++ b/locale/en/corteza-webapp-compose/block.yaml
@@ -5,6 +5,8 @@ selector:
     clone:
       ref: Clone with references
       noRef: Clone without references
+  selectableGlobalBlocks: 
+    placeholder: Select global block from other pages
 automation:
   addPlaceholderLabel: Add placeholder (dummy button)
   availableScriptsAndWorkflow: Available scripts and workflows ({{count}})
@@ -181,7 +183,7 @@ general:
     dragAndDrop: Drag and drop to change order
     translations: Field translations
   globalBlock:
-    label: Make a global block
+    label: Global block
 iframe:
   label: IFrame
   pickURLField: Pick an URL field
